Integrate demos into one page

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "promise_vs_jquery_deferred",
+  "name": "jquery_deferred_demo",
   "author": "atti",
   "license": "MIT",
   "devDependencies": {
